# kubera-quant

./: .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
notebooks/: quickstart.ipynb
src/quant/cli/: __init__.py  __main__.py  commands.py
src/quant/core/: CONTEXT.md  config.py  credentials.py
src/quant/core/backtest/: CONTEXT.md  __init__.py  engine.py  optimize.py  report.py
src/quant/core/data/: CONTEXT.md  __init__.py  base.py  bigquery.py  cache.py  crypto.py  krx.py  resolver.py  us.py
src/quant/core/strategy/: CONTEXT.md  __init__.py  base.py  dca.py  momentum.py  rebalance.py  sma_cross.py
src/quant/core/trading/: CONTEXT.md  __init__.py
tests/: conftest.py  test_backtest.py  test_cli.py  test_config.py  test_credentials.py  test_data_bigquery.py  test_data_cache.py  test_data_crypto.py  test_data_krx.py  test_data_us.py  test_optimize.py  test_resolver.py  test_strategy.py
